--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.108.1",
+    "@react-three/fiber": "^8.16.2",
+    "@react-three/rapier": "^1.3.1",
+    "@tabler/icons-react": "^3.7.0",
+    "@types/lodash": "^4.17.0",
+    "@types/three": "^0.164.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-responsive": "^10.0.0",
+    "sass": "^1.75.0",
+    "tailwind-merge": "^2.3.0",
+    "three": "^0.164.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
