--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-three/fiber": "^8.16.2",
     "@react-three/rapier": "^1.3.1",
     "@tabler/icons-react": "^3.7.0",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "@types/lodash": "^4.17.0",
     "@types/three": "^0.164.0",
     "clsx": "^2.1.1",
